# labs_oop

./: CMakeLists.txt
lab_01/: CMakeLists.txt  main.cpp
lab_01/src/: task.cpp  task.h
lab_01/tests/: tests.cpp
lab_02/: CMakeLists.txt  main.cpp
lab_02/src/: task.cpp  task.h
lab_02/tests/: tests.cpp
lab_03/: CMakeLists.txt  main.cpp
lab_03/src/array/: Array.cpp  Array.h
lab_03/src/figure/: Figure.cpp  Figure.h
lab_03/src/hexagon/: Hexagon.cpp  Hexagon.h
lab_03/src/octagon/: Octagon.cpp  Octagon.h
lab_03/src/point/: Point.cpp  Point.h
lab_03/src/triangle/: Triangle.cpp  Triangle.h
lab_03/tests/: tests.cpp
